--- a/spring-boot-properties-demo/build.gradle
+++ b/spring-boot-properties-demo/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id 'war'
+	id 'eclipse'
 }
 
 group = 'com.example'
@@ -23,4 +24,10 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	jvmArgs = [
+		'-Dexample.system-property.valuesArray=a,b,c',
+		'-Dexample.system-property.systemProperty=systemProeprtyValue',
+		'-DsystemPropertyKey=24hgjh23g423',
+		'-DsystemPropertyKey2=23b42m3'
+	]
 }
