--- a/spring-boot-properties-demo/src/main/resources/application.properties
+++ b/spring-boot-properties-demo/src/main/resources/application.properties
@@ -6,3 +6,5 @@ example.property-file.key=value
 example.property-file.listOfValues=value,value1,value2,value3
 example.property-file.mapOfValues={key1: '1', key2: '2', key3: '3'}
 #example.property-file.defaul-mapOfValues=
+
+example.class.some-property=123h13j12
