--- a/spring-boot-properties-demo/src/test/resources/application.properties
+++ b/spring-boot-properties-demo/src/test/resources/application.properties
@@ -8,3 +8,4 @@ example.property-file.mapOfValues={key1: '1', key2: '2', key3: '3'}
 #example.property-file.defaul-mapOfValues=
 
 example.class.some-property=123h13j12
+example.class.start-date=03-25-2016
