adding child property changes

--- a/spring-boot-properties-demo/src/main/resources/application.properties
+++ b/spring-boot-properties-demo/src/main/resources/application.properties
@@ -9,3 +9,7 @@ example.property-file.mapOfValues={key1: '1', key2: '2', key3: '3'}
 
 example.class.some-property=123h13j12
 example.class.start-date=03-25-2016
+example.class.key-value.property=value
+
+example.class.child-property.child-example.key=value
+example.class.child-property.child-example.key-two=value
